14-NetworkPolicies/deny-from-outside-cluster.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-from-oustide-cluster
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
